--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -162,8 +162,15 @@ bind P choose-buffer # choose which buffer to paste from
 
 # -- user defined overrides ----------------------------------------------------
 
-source -q ~/.tmux.conf.local
+source -q ~/.tmux/sonokai-espresso.tmux.conf
 
+# -- set plugins ---------------------------------------------------------------
+
+tmux_conf_update_plugins_on_launch=true
+
+tmux_conf_update_plugins_on_reload=true
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # -- 8< ------------------------------------------------------------------------
 
