switch to zinit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -162,15 +162,15 @@ bind P choose-buffer # choose which buffer to paste from
 
 # -- user defined overrides ----------------------------------------------------
 
-source -q ~/.tmux/sonokai-espresso.tmux.conf
+source -q ~/.tmux.conf.local
 
 # -- set plugins ---------------------------------------------------------------
 
-tmux_conf_update_plugins_on_launch=true
+# tmux_conf_update_plugins_on_launch=true
 
-tmux_conf_update_plugins_on_reload=true
+#tmux_conf_update_plugins_on_reload=true
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # -- 8< ------------------------------------------------------------------------
 
