--- a/nvim/.config/coc/extensions/package.json
+++ b/nvim/.config/coc/extensions/package.json
@@ -3,5 +3,7 @@
     "coc-json": ">=1.3.6",
     "coc-pyright": ">=1.1.157",
     "coc-rust-analyzer": ">=0.47.2"
-  }
+  },
+  "disabled": [],
+  "locked": []
 }
