--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -9,6 +9,24 @@
                     "directory": "/tmp/ccls"
                 }
             }
+        },
+        "haskell": {
+            "command": "haskell-language-server-wrapper",
+            "args": [
+              "--lsp"
+            ],
+            "rootPatterns": [
+              ".stack.yaml",
+              ".hie-bios",
+              "BUILD.bazel",
+              "cabal.config",
+              "package.yaml"
+            ],
+            "filetypes": [
+              "hs",
+              "lhs",
+              "haskell"
+            ]
         }
     }
 }
