overhauled a lot of stuff

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,8 +5,7 @@ set -g default-command "${SHELL}"
 setw -g mode-keys vi
 
 set -g default-terminal "tmux-256color" # colors!
-#set -ga terminal-overrides ",xterm-256col*:Tc"
-set -as terminal-features ",xterm-256color:RGB"
+set -as terminal-overrides ",xterm-256color:RGB"
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
@@ -21,7 +20,7 @@ set -g history-limit 10000               # boost history
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # line color
-source-file ~/.tmux/tmuxline/sonokai-espresso.tmux.conf
+source ~/.tmux/tmuxline/everforest-dark.tmux.conf
 
 # -- display -------------------------------------------------------------------
 
@@ -44,7 +43,6 @@ bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 # activity
 set -g monitor-activity on
 set -g visual-activity off
-
 
 # -- navigation ----------------------------------------------------------------
 
@@ -85,6 +83,9 @@ bind Tab last-window        # move to last active window
 
 # toggle mouse
 set -g mouse on
+
+# update new window path
+bind . attach -c "#{pane_current_path}"
 
 # -- copy mode -----------------------------------------------------------------
 
