--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ set -g default-command "${SHELL}"
 
 setw -g mode-keys vi
 
-set -g default-terminal "tmux-256color" # colors!
+set -g default-terminal "xterm-256color" # colors!
 set -as terminal-overrides ",xterm-256color:RGB"
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
@@ -16,11 +16,14 @@ bind C-a send-prefix -2
 
 set -g history-limit 10000               # boost history
 
+# source tmuxline theme
+source ~/.tmux/tmuxline/sonokai-shusia.tmux.conf
+
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-# line color
-source ~/.tmux/tmuxline/sonokai-andromeda.tmux.conf
+# new session if attach when no session exists
+new-session
 
 # -- display -------------------------------------------------------------------
 
@@ -87,6 +90,9 @@ set -g mouse on
 # update new window path
 bind . attach -c "#{pane_current_path}"
 
+# tmux-fzf binds
+TMUX_FZF_LAUNCH_KEY="C-f"
+
 # -- copy mode -----------------------------------------------------------------
 
 bind Enter copy-mode # enter copy mode
@@ -117,16 +123,8 @@ tmux_conf_update_plugins_on_reload=true
 set -g @plugin 'tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+#set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'sainnhe/tmux-net-speed'
-set -g @plugin 'sainnhe/tmux-plugin-sysstat'
 set -g @plugin 'sainnhe/tmux-fzf'
 
 run '~/.tmux/plugins/tpm/tpm'
-
-# sysstat plugin
-set -g @sysstat_cpu_view_tmpl '#[fg=magenta]C:#[default] #[fg=#{cpu.color}]#{cpu.pused}#[default]'
-set -g @sysstat_mem_view_tmpl '#[fg=magenta]M:#[default] #[fg=#{mem.color}]#{mem.pused}#[default]'
-set -g status-interval 3
-
