--- a/tmux/.tmux/tmuxline/everforest-light.tmux.conf
+++ b/tmux/.tmux/tmuxline/everforest-light.tmux.conf
@@ -1,21 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sun, 14 Mar 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=#92978c,bg=#e4e2cd"
+set -g message-command-style "fg=#9da9a0,bg=#475258"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=#93b259"
-set -g status-style "none,bg=#f3efda"
-set -g message-style "fg=#92978c,bg=#e4e2cd"
-set -g pane-border-style "fg=#e4e2cd"
+set -g pane-active-border-style "fg=#a7c080"
+set -g status-style "none,bg=#343f44"
+set -g message-style "fg=#9da9a0,bg=#475258"
+set -g pane-border-style "fg=#475258"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#93b259,bg=#f3efda"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=#92978c,bg=#f3efda"
-set -g status-left "#[fg=#fdf6e3,bg=#93b259] #S #[fg=#93b259,bg=#e4e2cd,nobold,nounderscore,noitalics]#[fg=#92978c,bg=#e4e2cd] %R #[fg=#e4e2cd,bg=#f3efda,nobold,nounderscore,noitalics]#[fg=#999f93,bg=#f3efda] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#f3efda,bg=#f3efda,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#f3efda,bg=#f3efda,nobold,nounderscore,noitalics]#[fg=#999f93,bg=#f3efda] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#e4e2cd,bg=#f3efda,nobold,nounderscore,noitalics]#[fg=#92978c,bg=#e4e2cd] %a #[fg=#93b259,bg=#e4e2cd,nobold,nounderscore,noitalics]#[fg=#fdf6e3,bg=#93b259] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#f3efda,bg=#f3efda,nobold,nounderscore,noitalics]#[fg=#92978c] #I  #W #[fg=#f3efda,bg=#f3efda,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#f3efda,bg=#e4e2cd,nobold,nounderscore,noitalics]#[fg=#92978c,bg=#e4e2cd] #I  #W  #F #[fg=#e4e2cd,bg=#f3efda,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#859289,bg=#343f44"
+set -g status-left "#[fg=#2d353b,bg=#a7c080] #S #[fg=#a7c080,bg=#343f44,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#475258,bg=#343f44,nobold,nounderscore,noitalics]#[fg=#9da9a0,bg=#475258] %Y-%m-%d  %H:%M #[fg=#a7c080,bg=#475258,nobold,nounderscore,noitalics]#[fg=#2d353b,bg=#a7c080] #h "
+setw -g window-status-format "#[fg=#859289,bg=#343f44] #I #[fg=#859289,bg=#343f44] #W "
+setw -g window-status-current-format "#[fg=#343f44,bg=#475258,nobold,nounderscore,noitalics]#[fg=#9da9a0,bg=#475258] #I #[fg=#9da9a0,bg=#475258] #W #[fg=#475258,bg=#343f44,nobold,nounderscore,noitalics]"
