--- a/tmux/.tmux/tmuxline/gruvbox-material-dark.tmux.conf
+++ b/tmux/.tmux/tmuxline/gruvbox-material-dark.tmux.conf
@@ -1,21 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 05 May 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=#a89984,bg=#504945"
+set -g message-command-style "fg=#ddc7a1,bg=#504945"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=#a89984"
-set -g status-style "none,bg=#3a3735"
-set -g message-style "fg=#a89984,bg=#504945"
+set -g status-style "none,bg=#32302f"
+set -g message-style "fg=#ddc7a1,bg=#504945"
 set -g pane-border-style "fg=#504945"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "underscore,fg=#a89984,bg=#3a3735"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=#a89984,bg=#3a3735"
-set -g status-left "#[fg=#282828,bg=#a89984] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] %R #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#3a3735] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#3a3735] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#282828,bg=#a89984] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984] #I  #W #[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#3a3735,bg=#504945,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] #I  #W  #F #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#ddc7a1,bg=#32302f"
+set -g status-left "#[fg=#282828,bg=#a89984] #S #[fg=#a89984,bg=#32302f,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %Y-%m-%d  %H:%M #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#282828,bg=#a89984] #h "
+setw -g window-status-format "#[fg=#ddc7a1,bg=#32302f] #I #[fg=#ddc7a1,bg=#32302f] #W "
+setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I #[fg=#ddc7a1,bg=#504945] #W #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
