--- a/tmux/.tmux/tmuxline/sonokai-andromeda.tmux.conf
+++ b/tmux/.tmux/tmuxline/sonokai-andromeda.tmux.conf
@@ -1,7 +1,7 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 05 May 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#e1e3e4,bg=#3f445b"
@@ -12,10 +12,10 @@ set -g message-style "fg=#e1e3e4,bg=#3f445b"
 set -g pane-border-style "fg=#3f445b"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#77d5f0,bg=#333648"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#e1e3e4,bg=#333648"
-set -g status-left "#[fg=#2b2d3a,bg=#77d5f0] #S #[fg=#77d5f0,bg=#3f445b,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#3f445b] %R #[fg=#3f445b,bg=#333648,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#333648] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#333648,bg=#333648,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#333648,bg=#333648,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#333648] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#3f445b,bg=#333648,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#3f445b] %a #[fg=#77d5f0,bg=#3f445b,nobold,nounderscore,noitalics]#[fg=#2b2d3a,bg=#77d5f0] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#333648,bg=#333648,nobold,nounderscore,noitalics]#[fg=#e1e3e4] #I  #W #[fg=#333648,bg=#333648,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#333648,bg=#3f445b,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#3f445b] #I  #W  #F #[fg=#3f445b,bg=#333648,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#2b2d3a,bg=#77d5f0] #S #[fg=#77d5f0,bg=#333648,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#3f445b,bg=#333648,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#3f445b] %Y-%m-%d  %H:%M #[fg=#77d5f0,bg=#3f445b,nobold,nounderscore,noitalics]#[fg=#2b2d3a,bg=#77d5f0] #h "
+setw -g window-status-format "#[fg=#e1e3e4,bg=#333648] #I #[fg=#e1e3e4,bg=#333648] #W "
+setw -g window-status-current-format "#[fg=#333648,bg=#3f445b,nobold,nounderscore,noitalics]#[fg=#e1e3e4,bg=#3f445b] #I #[fg=#e1e3e4,bg=#3f445b] #W #[fg=#3f445b,bg=#333648,nobold,nounderscore,noitalics]"
