--- a/tmux/.tmux/tmuxline/sonokai-espresso.tmux.conf
+++ b/tmux/.tmux/tmuxline/sonokai-espresso.tmux.conf
@@ -1,7 +1,7 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Tue, 01 Jun 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#e4e3e1,bg=#4e433f"
@@ -12,10 +12,10 @@ set -g message-style "fg=#e4e3e1,bg=#4e433f"
 set -g pane-border-style "fg=#4e433f"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#85dad2,bg=#393230"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#e4e3e1,bg=#393230"
-set -g status-left "#[fg=#312c2b,bg=#85dad2] #S #[fg=#85dad2,bg=#4e433f,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#4e433f] %R #[fg=#4e433f,bg=#393230,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#393230] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#393230,bg=#393230,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#393230,bg=#393230,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#393230] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#4e433f,bg=#393230,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#4e433f] %a #[fg=#85dad2,bg=#4e433f,nobold,nounderscore,noitalics]#[fg=#312c2b,bg=#85dad2] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#393230,bg=#393230,nobold,nounderscore,noitalics]#[fg=#e4e3e1] #I  #W #[fg=#393230,bg=#393230,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#393230,bg=#4e433f,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#4e433f] #I  #W  #F #[fg=#4e433f,bg=#393230,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#312c2b,bg=#85dad2] #S #[fg=#85dad2,bg=#393230,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#4e433f,bg=#393230,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#4e433f] %Y-%m-%d  %H:%M #[fg=#85dad2,bg=#4e433f,nobold,nounderscore,noitalics]#[fg=#312c2b,bg=#85dad2] #h "
+setw -g window-status-format "#[fg=#e4e3e1,bg=#393230] #I #[fg=#e4e3e1,bg=#393230] #W "
+setw -g window-status-current-format "#[fg=#393230,bg=#4e433f,nobold,nounderscore,noitalics]#[fg=#e4e3e1,bg=#4e433f] #I #[fg=#e4e3e1,bg=#4e433f] #W #[fg=#4e433f,bg=#393230,nobold,nounderscore,noitalics]"
