--- a/tmux/.tmux/tmuxline/sonokai-maia.tmux.conf
+++ b/tmux/.tmux/tmuxline/sonokai-maia.tmux.conf
@@ -1,7 +1,7 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 05 May 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#e1e2e3,bg=#414b53"
@@ -12,10 +12,10 @@ set -g message-style "fg=#e1e2e3,bg=#414b53"
 set -g pane-border-style "fg=#414b53"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#7cd5f1,bg=#313b42"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#e1e2e3,bg=#313b42"
-set -g status-left "#[fg=#273136,bg=#7cd5f1] #S #[fg=#7cd5f1,bg=#414b53,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#414b53] %R #[fg=#414b53,bg=#313b42,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#313b42] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#313b42,bg=#313b42,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#313b42,bg=#313b42,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#313b42] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#414b53,bg=#313b42,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#414b53] %a #[fg=#7cd5f1,bg=#414b53,nobold,nounderscore,noitalics]#[fg=#273136,bg=#7cd5f1] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#313b42,bg=#313b42,nobold,nounderscore,noitalics]#[fg=#e1e2e3] #I  #W #[fg=#313b42,bg=#313b42,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#313b42,bg=#414b53,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#414b53] #I  #W  #F #[fg=#414b53,bg=#313b42,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#273136,bg=#7cd5f1] #S #[fg=#7cd5f1,bg=#313b42,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#414b53,bg=#313b42,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#414b53] %Y-%m-%d  %H:%M #[fg=#7cd5f1,bg=#414b53,nobold,nounderscore,noitalics]#[fg=#273136,bg=#7cd5f1] #h "
+setw -g window-status-format "#[fg=#e1e2e3,bg=#313b42] #I #[fg=#e1e2e3,bg=#313b42] #W "
+setw -g window-status-current-format "#[fg=#313b42,bg=#414b53,nobold,nounderscore,noitalics]#[fg=#e1e2e3,bg=#414b53] #I #[fg=#e1e2e3,bg=#414b53] #W #[fg=#414b53,bg=#313b42,nobold,nounderscore,noitalics]"
