--- a/tmux/.tmux/tmuxline/sonokai-shusia.tmux.conf
+++ b/tmux/.tmux/tmuxline/sonokai-shusia.tmux.conf
@@ -1,7 +1,7 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 05 May 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#e3e1e4,bg=#49464e"
@@ -12,10 +12,10 @@ set -g message-style "fg=#e3e1e4,bg=#49464e"
 set -g pane-border-style "fg=#49464e"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#78dce8,bg=#37343a"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#e3e1e4,bg=#37343a"
-set -g status-left "#[fg=#2d2a2e,bg=#78dce8] #S #[fg=#78dce8,bg=#49464e,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#49464e] %R #[fg=#49464e,bg=#37343a,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#37343a] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#37343a,bg=#37343a,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#37343a,bg=#37343a,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#37343a] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#49464e,bg=#37343a,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#49464e] %a #[fg=#78dce8,bg=#49464e,nobold,nounderscore,noitalics]#[fg=#2d2a2e,bg=#78dce8] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#37343a,bg=#37343a,nobold,nounderscore,noitalics]#[fg=#e3e1e4] #I  #W #[fg=#37343a,bg=#37343a,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#37343a,bg=#49464e,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#49464e] #I  #W  #F #[fg=#49464e,bg=#37343a,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#2d2a2e,bg=#78dce8] #S #[fg=#78dce8,bg=#37343a,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#49464e,bg=#37343a,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#49464e] %Y-%m-%d  %H:%M #[fg=#78dce8,bg=#49464e,nobold,nounderscore,noitalics]#[fg=#2d2a2e,bg=#78dce8] #h "
+setw -g window-status-format "#[fg=#e3e1e4,bg=#37343a] #I #[fg=#e3e1e4,bg=#37343a] #W "
+setw -g window-status-current-format "#[fg=#37343a,bg=#49464e,nobold,nounderscore,noitalics]#[fg=#e3e1e4,bg=#49464e] #I #[fg=#e3e1e4,bg=#49464e] #W #[fg=#49464e,bg=#37343a,nobold,nounderscore,noitalics]"
