--- a/tmux/.tmux/tmuxline/sonokai.tmux.conf
+++ b/tmux/.tmux/tmuxline/sonokai.tmux.conf
@@ -1,7 +1,7 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 05 May 2021
+# on Tue, 31 Oct 2023
 
-set -g status-justify "centre"
+set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#e2e2e3,bg=#414550"
@@ -12,10 +12,10 @@ set -g message-style "fg=#e2e2e3,bg=#414550"
 set -g pane-border-style "fg=#414550"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=#85d3f2,bg=#33353f"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#e2e2e3,bg=#33353f"
-set -g status-left "#[fg=#2c2e34,bg=#85d3f2] #S #[fg=#85d3f2,bg=#414550,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#414550] %R #[fg=#414550,bg=#33353f,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#33353f] #{sysstat_mem} #[fg=blue]#{sysstat_ntemp} #(~/.tmux/tmuxline/widget-color.sh)祝#{upload_speed} #[fg=#33353f,bg=#33353f,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#33353f,bg=#33353f,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#33353f] #(~/.tmux/tmuxline/widget-color.sh)#{download_speed}  #[fg=blue]#{sysstat_itemp} #{sysstat_cpu} #[fg=#414550,bg=#33353f,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#414550] %a #[fg=#85d3f2,bg=#414550,nobold,nounderscore,noitalics]#[fg=#2c2e34,bg=#85d3f2] #H #{prefix_highlight} "
-setw -g window-status-format "#[fg=#33353f,bg=#33353f,nobold,nounderscore,noitalics]#[fg=#e2e2e3] #I  #W #[fg=#33353f,bg=#33353f,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#33353f,bg=#414550,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#414550] #I  #W  #F #[fg=#414550,bg=#33353f,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#2c2e34,bg=#85d3f2] #S #[fg=#85d3f2,bg=#33353f,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#414550,bg=#33353f,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#414550] %Y-%m-%d  %H:%M #[fg=#85d3f2,bg=#414550,nobold,nounderscore,noitalics]#[fg=#2c2e34,bg=#85d3f2] #h "
+setw -g window-status-format "#[fg=#e2e2e3,bg=#33353f] #I #[fg=#e2e2e3,bg=#33353f] #W "
+setw -g window-status-current-format "#[fg=#33353f,bg=#414550,nobold,nounderscore,noitalics]#[fg=#e2e2e3,bg=#414550] #I #[fg=#e2e2e3,bg=#414550] #W #[fg=#414550,bg=#33353f,nobold,nounderscore,noitalics]"
